--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplefolio",
+  "name": "my-portfolio-web-app",
   "version": "1.0.0",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "main": "index.js",
@@ -8,16 +8,15 @@
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cobidev/simplefolio"
+    "type": "git"
   },
   "keywords": [],
   "author": "Jacobo Martinez",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cobidev/simplefolio/issues"
+    "url": "https://github.com/frankoadeleye/my-portfolio-web-app/issues"
   },
-  "homepage": "https://github.com/cobidev/simplefolio#readme",
+  "homepage": "https://github.com/frankoadeleye/my-portfolio-web-app#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
